--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             --background-color: #2c2f33; --secondary-bg-color: #23272a; --header-bg-color: #1e2124;
             --text-color: #ffffff; --text-muted-color: #99aab5; --accent-color: #7289da;
             --private-msg-color: #f0b90c; --border-color: #444; --hover-color: #3a3e42;
-            --notification-color: #43b581; /* ZMIANA: Bardziej jaskrawy zielony */
+            --notification-color: #198754; /* ZMIANA: Ciemny, widoczny zielony */
             --danger-color: #dc3545; --voice-active-color: #43b581;
             --sidebar-width: clamp(200px, 30vw, 240px); --transition-speed: 0.3s;
             --header-height: 52px;
